--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fastify-secure-session": "^2.3.0",
     "fastify-sensible": "^3.0.1",
     "fastify-static": "^3.3.0",
+    "final-form": "^4.20.1",
     "formik": "^2.2.0",
     "gon": "^1.0.3",
     "jquery": "^3.5.1",
@@ -56,6 +57,7 @@
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-final-form": "^6.5.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
