--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "image-webpack-loader": "^7.0.1",
     "jest": "^26.6.0",
     "jest-cli": "^26.6.0",
     "mini-css-extract-plugin": "^1.1.1",
