--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
@@ -58,6 +64,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
     "react-final-form": "^6.5.2",
+    "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
