--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
     "react-final-form": "^6.5.2",
+    "react-hotkeys-hook": "^2.4.0",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
